# Quadratka

./: CMakeLists.txt  FILES.h  Menu.cpp  QUADRATIC_Library.h  TEST.h  ToSolve.txt  ToTest.txt  are_equal.cpp  displayMenu.cpp  equations.cpp  is_file_empty.cpp  main.cpp  output_roots.cpp  random_double.cpp  solve_from_file.cpp  solve_qEquations.cpp  solve_qEquations_from_file.cpp  solve_random_equation.cpp  solve_random_qEquations.cpp  test.cpp  test_all.cpp  test_from_file.cpp
